# uprecom

./: .gitignore  README.md  Settings.py  package.json  pyproject.toml
.github/workflows/: python-app.yml
src/api/: product_recommender.py
src/components/preprocess/: lowercase.py  specialcharfilter.py  tokenizer.py  whitespace.py
src/model/word2vec/: main.py  utils.py  word2vec.py
src/myclasses/: enums.py  pipeline.py
src/uprecom/api/: request_handler.py
src/uprecom/components/preprocess/: lowercasefilter.py  stopword_filter.py
src/uprecom/model/word2vec/: main.py  word2vec.py
src/uprecom/myclasses/: pipeline.py
src/uprecom/visualise/: streamlit_demo.py
src/visualise/: streamlit_demo.py
test/components/preprocess/: test_lowercase.py  test_whitespace.py
