[tool.poetry]
name = "uprecom"
version = "1.0.0"
description = "Information retrival model"
authors = ["ashish6630 <ashish6630@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
numpy = "^1.23.0"
pandas = "^1.4.3"
streamlit = "^1.10.0"
gensim = "^4.2.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
